2007-09-28  Xavier Claessens  <xclaesse@gmail.com>

	* configure.ac: Bump version to 0.14.
	* doc/*: Updated.

2007-09-28  Xavier Claessens  <xclaesse@gmail.com>

	* ChangeLog:
	* configure.ac:
	* NEWS: Updated for 0.13 release.

2007-09-28  Xavier Claessens  <xclaesse@gmail.com>

	* configure.ac:
	* src/empathy.c: Remove GnomeProgram, not useful anymore, drop libgnome
	dependency. Fixes bug #442079

	* libempathy/empathy-avatar.c:
	* libempathy/empathy-avatar.h: Fix Copyright header.

	* libempathy/empathy-contact-factory.c:
	* libempathy/empathy-tp-group.c: Free return value for async DBus calls,
	they are not owned by dbus-glib. This fix big leaks, thanks again to
	valgrind.

2007-09-28  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-tp-group.c: Look in the local_pendings list if a
	contact is already local pending.
	* tests/contact-manager.c: Fix white space typo.

2007-09-27  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-utils.c:
	* libempathy/empathy-contact-factory.c: Fix 2 leaks thanks to valgrind.

2007-09-27  Xavier Claessens  <xclaesse@gmail.com>

	* tests/contact-manager.c:
	* tests/Makefile.am: No need to init gtk, GMainLoop is enough and makes
	easier to run valgrind.

2007-09-27  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-avatar.c: Fix leak when loading avatar from cache.
	* libempathy/empathy-contact-factory.c: Do not request avatar for
	unknown tokens, wait for AvatarUpdate signal.

2007-09-27  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-profile-chooser.c: Set the sort function before
	begin to sort otherwise we get warnings.

2007-09-26  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-utils.c:
	* libempathy/empathy-utils.h:
	* libempathy/empathy-avatar.c:
	* libempathy/empathy-avatar.h:
	* libempathy/empathy-contact-factory.c: Cache avatars and RequestAvatars
	only when needed.

2007-09-26  Xavier Claessens  <xclaesse@gmail.com>
